antsurance/force-app/main/default/objects/File_Note__c/File_Note__c.object-meta.xml
<CustomObject>
    <description>A dated note on a claim, service request, policy or customer file, written by whoever handled it: a call with the insured, an investigation step, a coverage or reserve decision. A note on a case also shows on its policy and customer.</description>
    <label>File Note</label>
    <nameField>
        <displayFormat>FN-{00000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>