antsurance/force-app/main/default/objects/File_Note__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The customer this note is about, or the customer of its claim or policy.</description>
    <label>Customer</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>File Notes</relationshipLabel>
    <relationshipName>File_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>