antsurance/force-app/main/default/objects/File_Note__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <description>Who wrote the note, with their role. Blank means the user who created it.</description>
    <label>Author</label>
    <length>80</length>
    <type>Text</type>
</CustomField>