antsurance/force-app/main/default/objects/File_Note__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The note itself. Markdown is rendered in the File Notes timeline.</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>