antsurance/force-app/main/default/objects/File_Note__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The claim or service request this note is about.</description>
    <label>Claim or Request</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>File Notes</relationshipLabel>
    <relationshipName>File_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>