antsurance/force-app/main/default/objects/File_Note__c/fields/Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Date__c</fullName>
    <description>When the activity happened. Defaults to now.</description>
    <label>Note Date</label>
    <defaultValue>NOW()</defaultValue>
    <type>DateTime</type>
</CustomField>