antsurance/force-app/main/default/objects/File_Note__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <description>The policy this note is about, or the policy of its claim.</description>
    <label>Policy</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>File Notes</relationshipLabel>
    <relationshipName>File_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>